// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the bucket names and IDs in phase 0 should not change: PBMMAccel-LogArchive-Phase0 1`] = `
Array [
  Object {
    "LogicalId": "cacentral1",
    "Properties": Object {
      "BucketName": undefined,
    },
  },
  Object {
    "LogicalId": "aescacentral1",
    "Properties": Object {
      "BucketName": undefined,
    },
  },
]
`;

exports[`the bucket names and IDs in phase 0 should not change: PBMMAccel-Master-Phase0 1`] = `
Array [
  Object {
    "LogicalId": "configcacentral1",
    "Properties": Object {
      "BucketName": undefined,
    },
  },
]
`;

exports[`the bucket names and IDs in phase 0 should not change: PBMMAccel-Operations-Phase0 1`] = `Array []`;

exports[`the bucket names and IDs in phase 0 should not change: PBMMAccel-Security-Phase0 1`] = `Array []`;

exports[`the bucket names and IDs in phase 0 should not change: PBMMAccel-SharedNetwork-Phase0 1`] = `Array []`;

exports[`the bucket names and IDs in phase 0 should not change: PBMMAccel-SharedNetwork-Phase0 2`] = `Array []`;
